fixed lists not reordering when overflow

--- a/frontend/bowtie/src/components/gamelist/layout.scss
+++ b/frontend/bowtie/src/components/gamelist/layout.scss
@@ -3,6 +3,7 @@
 .layout-lists {
   margin-top: $header-size;
   white-space: nowrap;
+  display: inline-block;
   margin-left: 20px;
 }
 
